# diesel-libsql

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  knope.toml
.github/workflows/: ci.yml  release.yml
examples/: async_usage.rs  local_usage.rs  remote_usage.rs
src/: async_conn.rs  backend.rs  bb8.rs  bind_collector.rs  connection.rs  deadpool.rs  from_sql.rs  instrumentation.rs  lib.rs  query_builder.rs  r2d2.rs  row.rs  to_sql.rs  value.rs
tests/: async_local.rs  local.rs  otel_test.rs  remote.rs  server.rs
tests/migrations/00000000000001_create_items/: up.sql
